a/gramatica.output
Terminals unused in grammar

    TK_ENTERO
    TK_REAL
    TK_MOD
    TK_MAYOR
    TK_MENOR
    TK_MENOR_IGUAL
    TK_MAYOR_IGUAL
    TK_DISTINTO
    TK_BOOLEANO
    TK_CARACTER
    TK_CADENA
    TK_R_REAL
    TK_R_BOOLEANO
    TK_R_CADENA
    TK_R_ENTERO


State 43 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 83 conflicts: 8 shift/reduce
State 91 conflicts: 1 shift/reduce
State 110 conflicts: 1 reduce/reduce
State 113 conflicts: 8 shift/reduce, 1 reduce/reduce
State 132 conflicts: 2 shift/reduce
State 142 conflicts: 2 shift/reduce
State 160 conflicts: 1 reduce/reduce
State 161 conflicts: 1 reduce/reduce
State 162 conflicts: 1 reduce/reduce
State 163 conflicts: 1 reduce/reduce
State 164 conflicts: 1 reduce/reduce
State 165 conflicts: 1 reduce/reduce
State 166 conflicts: 1 reduce/reduce
State 167 conflicts: 1 reduce/reduce


Grammar

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_PUNTO_COMA cabecera_alg bloque_alg TK_FALGORITMO

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal TK_COMENTARIO

    3 bloque_alg: bloque TK_COMENTARIO

    4 decl_globales: decl_tipo decl_globales
    5              | decl_cte decl_globales
    6              | ε

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | ε

   10 bloque: declaraciones instrucciones

   11 declaraciones: decl_tipo declaraciones
   12              | decl_cte declaraciones
   13              | decl_var declaraciones
   14              | ε

   15 decl_tipo: TK_TIPO lista_d_tipo TK_FTIPO TK_PUNTO_COMA

   16 decl_cte: TK_CONST lista_d_cte TK_FCONST TK_PUNTO_COMA

   17 decl_var: TK_VAR lista_d_var TK_FVAR TK_PUNTO_COMA

   18 lista_d_tipo: TK_IDENTIFICADOR TK_IGUAL d_tipo TK_PUNTO_COMA lista_d_tipo
   19             | ε

   20 d_tipo: TK_TUPLA lista_campos TK_FTUPLA
   21       | TK_TABLA TK_ABRIR_TABLA expresion_t TK_SUBRANGO expresion_t TK_CERRAR_TABLA TK_DE d_tipo
   22       | TK_IDENTIFICADOR
   23       | expresion_t TK_DEFINICION expresion_t
   24       | TK_REF d_tipo
   25       | TK_TIPO_BASE

   26 expresion_t: expresion
   27            | TK_LITERAL_CARACTER

   28 lista_campos: TK_IDENTIFICADOR TK_DEFINICION d_tipo TK_PUNTO_COMA lista_campos
   29             | ε

   30 lista_d_cte: TK_IDENTIFICADOR TK_IGUAL TK_LITERAL TK_PUNTO_COMA lista_d_cte
   31            | ε

   32 lista_d_var: lista_id TK_DEFINICION TK_IDENTIFICADOR TK_PUNTO_COMA lista_d_var
   33            | lista_id TK_DEFINICION d_tipo TK_PUNTO_COMA lista_d_var
   34            | ε

   35 lista_id: TK_IDENTIFICADOR TK_SEPARADOR lista_id
   36         | TK_IDENTIFICADOR

   37 decl_ent_sal: decl_ent
   38             | decl_ent decl_sal
   39             | decl_sal

   40 decl_ent: TK_ENT lista_d_var

   41 decl_sal: TK_SAL lista_d_var

   42 exp_a: exp_a TK_SUMA exp_a
   43      | exp_a TK_RESTA exp_a
   44      | exp_a TK_PROD exp_a
   45      | exp_a TK_DIV_REA exp_a
   46      | exp_a TK_R_MOD exp_a
   47      | exp_a TK_DIV exp_a
   48      | TK_ABRIR_PARENTESIS exp_a TK_CERRAR_PARENTESIS
   49      | operando
   50      | TK_LITERAL_NUMERICO
   51      | TK_RESTA exp_a
   52      | exp_a TK_Y exp_a
   53      | exp_a TK_O exp_a
   54      | TK_NO exp_a
   55      | TK_VERDADERO
   56      | TK_FALSO
   57      | expresion TK_OPREL expresion

   58 expresion: exp_a
   59          | funcion_ll

   60 operando: TK_IDENTIFICADOR
   61         | operando TK_PUNTO operando
   62         | operando TK_ABRIR_PARENTESIS expresion TK_CERRAR_PARENTESIS
   63         | operando TK_REF

   64 instrucciones: instruccion TK_PUNTO_COMA instrucciones
   65              | instruccion

   66 instruccion: TK_CONTINUAR
   67            | asignacion
   68            | alternativa
   69            | iteracion
   70            | accion_ll

   71 asignacion: operando TK_ASIGNACION expresion

   72 alternativa: TK_SI expresion TK_ENTONCES instrucciones lista_opciones TK_FSI

   73 lista_opciones: TK_SINOSI expresion TK_ENTONCES instrucciones lista_opciones
   74               | ε

   75 iteracion: it_cota_fija
   76          | it_cota_exp

   77 it_cota_fija: TK_PARA TK_IDENTIFICADOR TK_ASIGNACION expresion TK_HASTA expresion TK_HACER instrucciones TK_FPARA

   78 it_cota_exp: TK_MIENTRAS expresion TK_HACER instrucciones TK_FMIENTRAS

   79 accion_d: TK_ACCION a_cabecera bloque TK_FACCION

   80 funcion_d: TK_FUNCION f_cabecera bloque TK_DEV expresion TK_FFUNCION

   81 a_cabecera: TK_IDENTIFICADOR TK_ABRIR_PARENTESIS d_par_form TK_CERRAR_PARENTESIS TK_PUNTO_COMA

   82 f_cabecera: TK_IDENTIFICADOR TK_ABRIR_PARENTESIS lista_d_var TK_CERRAR_PARENTESIS TK_DEV d_tipo TK_PUNTO_COMA

   83 d_par_form: d_p_form TK_PUNTO_COMA d_par_form
   84           | ε

   85 d_p_form: TK_ENT lista_id TK_DEFINICION d_tipo
   86         | TK_SAL lista_id TK_DEFINICION d_tipo
   87         | TK_ES lista_id TK_DEFINICION d_tipo

   88 accion_ll: TK_IDENTIFICADOR TK_ABRIR_PARENTESIS l_ll TK_CERRAR_PARENTESIS

   89 funcion_ll: TK_IDENTIFICADOR TK_ABRIR_PARENTESIS l_ll TK_CERRAR_PARENTESIS

   90 l_ll: expresion TK_SEPARADOR l_ll
   91     | expresion


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TK_ENTERO (258)
    TK_REAL (259)
    TK_ASIGNACION (260) 71 77
    TK_SEPARADOR (261) 35 90
    TK_DEFINICION (262) 23 28 32 33 85 86 87
    TK_SUBRANGO (263) 21
    TK_ENTONCES (264) 72 73
    TK_SUMA (265) 42
    TK_RESTA (266) 43 51
    TK_DIV (267) 47
    TK_PROD (268) 44
    TK_MOD (269)
    TK_R_MOD (270) 46
    TK_DIV_REA (271) 45
    TK_IGUAL (272) 18 30
    TK_O (273) 53
    TK_Y (274) 52
    TK_MAYOR (275)
    TK_MENOR (276)
    TK_MENOR_IGUAL (277)
    TK_MAYOR_IGUAL (278)
    TK_DISTINTO (279)
    TK_ABRIR_TABLA (280) 21
    TK_CERRAR_TABLA (281) 21
    TK_BOOLEANO (282)
    TK_ABRIR_PARENTESIS (283) 48 62 81 82 88 89
    TK_CERRAR_PARENTESIS (284) 48 62 81 82 88 89
    TK_TIPO_BASE (285) 25
    TK_PUNTO_COMA (286) 1 15 16 17 18 28 30 32 33 64 81 82 83
    TK_OPREL (287) 57
    TK_PUNTO (288) 61
    TK_CARACTER (289)
    TK_CADENA (290)
    TK_COMENTARIO (291) 2 3
    TK_ACCION (292) 79
    TK_ALGORITMO (293) 1
    TK_CONST (294) 16
    TK_CONTINUAR (295) 66
    TK_DE (296) 21
    TK_DEV (297) 80 82
    TK_ENT (298) 40 85
    TK_ES (299) 87
    TK_FACCION (300) 79
    TK_FALGORITMO (301) 1
    TK_FALSO (302) 56
    TK_FCONST (303) 16
    TK_FFUNCION (304) 80
    TK_FMIENTRAS (305) 78
    TK_FPARA (306) 77
    TK_FSI (307) 72
    TK_FTIPO (308) 15
    TK_FTUPLA (309) 20
    TK_FUNCION (310) 80
    TK_FVAR (311) 17
    TK_HACER (312) 77 78
    TK_HASTA (313) 77
    TK_MIENTRAS (314) 78
    TK_NO (315) 54
    TK_PARA (316) 77
    TK_REF (317) 24 63
    TK_SAL (318) 41 86
    TK_SI (319) 72
    TK_SINOSI (320) 73
    TK_TABLA (321) 21
    TK_TIPO (322) 15
    TK_TUPLA (323) 20
    TK_VAR (324) 17
    TK_VERDADERO (325) 55
    TK_R_REAL (326)
    TK_R_BOOLEANO (327)
    TK_R_CADENA (328)
    TK_R_ENTERO (329)
    TK_IDENTIFICADOR (330) 1 18 22 28 30 32 35 36 60 77 81 82 88 89
    TK_LITERAL_CARACTER (331) 27
    TK_LITERAL_NUMERICO (332) 50
    TK_LITERAL (333) 30


Nonterminals, with rules where they appear

    $accept (79)
        on left: 0
    desc_algoritmo (80)
        on left: 1
        on right: 0
    cabecera_alg (81)
        on left: 2
        on right: 1
    bloque_alg (82)
        on left: 3
        on right: 1
    decl_globales (83)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_f (84)
        on left: 7 8 9
        on right: 2 7 8
    bloque (85)
        on left: 10
        on right: 3 79 80
    declaraciones (86)
        on left: 11 12 13 14
        on right: 10 11 12 13
    decl_tipo (87)
        on left: 15
        on right: 4 11
    decl_cte (88)
        on left: 16
        on right: 5 12
    decl_var (89)
        on left: 17
        on right: 13
    lista_d_tipo (90)
        on left: 18 19
        on right: 15 18
    d_tipo (91)
        on left: 20 21 22 23 24 25
        on right: 18 21 24 28 33 82 85 86 87
    expresion_t (92)
        on left: 26 27
        on right: 21 23
    lista_campos (93)
        on left: 28 29
        on right: 20 28
    lista_d_cte (94)
        on left: 30 31
        on right: 16 30
    lista_d_var (95)
        on left: 32 33 34
        on right: 17 32 33 40 41 82
    lista_id (96)
        on left: 35 36
        on right: 32 33 35 85 86 87
    decl_ent_sal (97)
        on left: 37 38 39
        on right: 2
    decl_ent (98)
        on left: 40
        on right: 37 38
    decl_sal (99)
        on left: 41
        on right: 38 39
    exp_a (100)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 42 43 44 45 46 47 48 51 52 53 54 58
    expresion (101)
        on left: 58 59
        on right: 26 57 62 71 72 73 77 78 80 90 91
    operando (102)
        on left: 60 61 62 63
        on right: 49 61 62 63 71
    instrucciones (103)
        on left: 64 65
        on right: 10 64 72 73 77 78
    instruccion (104)
        on left: 66 67 68 69 70
        on right: 64 65
    asignacion (105)
        on left: 71
        on right: 67
    alternativa (106)
        on left: 72
        on right: 68
    lista_opciones (107)
        on left: 73 74
        on right: 72 73
    iteracion (108)
        on left: 75 76
        on right: 69
    it_cota_fija (109)
        on left: 77
        on right: 75
    it_cota_exp (110)
        on left: 78
        on right: 76
    accion_d (111)
        on left: 79
        on right: 7
    funcion_d (112)
        on left: 80
        on right: 8
    a_cabecera (113)
        on left: 81
        on right: 79
    f_cabecera (114)
        on left: 82
        on right: 80
    d_par_form (115)
        on left: 83 84
        on right: 81 83
    d_p_form (116)
        on left: 85 86 87
        on right: 83
    accion_ll (117)
        on left: 88
        on right: 70
    funcion_ll (118)
        on left: 89
        on right: 59
    l_ll (119)
        on left: 90 91
        on right: 88 89 90


State 0

    0 $accept: • desc_algoritmo $end

    TK_ALGORITMO  shift, and go to state 1

    desc_algoritmo  go to state 2


State 1

    1 desc_algoritmo: TK_ALGORITMO • TK_IDENTIFICADOR TK_PUNTO_COMA cabecera_alg bloque_alg TK_FALGORITMO

    TK_IDENTIFICADOR  shift, and go to state 3


State 2

    0 $accept: desc_algoritmo • $end

    $end  shift, and go to state 4


State 3

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR • TK_PUNTO_COMA cabecera_alg bloque_alg TK_FALGORITMO

    TK_PUNTO_COMA  shift, and go to state 5


State 4

    0 $accept: desc_algoritmo $end •

    $default  accept


State 5

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_PUNTO_COMA • cabecera_alg bloque_alg TK_FALGORITMO

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    cabecera_alg   go to state 8
    decl_globales  go to state 9
    decl_tipo      go to state 10
    decl_cte       go to state 11


State 6

   16 decl_cte: TK_CONST • lista_d_cte TK_FCONST TK_PUNTO_COMA

    TK_IDENTIFICADOR  shift, and go to state 12

    $default  reduce using rule 31 (lista_d_cte)

    lista_d_cte  go to state 13


State 7

   15 decl_tipo: TK_TIPO • lista_d_tipo TK_FTIPO TK_PUNTO_COMA

    TK_IDENTIFICADOR  shift, and go to state 14

    $default  reduce using rule 19 (lista_d_tipo)

    lista_d_tipo  go to state 15


State 8

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_PUNTO_COMA cabecera_alg • bloque_alg TK_FALGORITMO

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque_alg     go to state 17
    bloque         go to state 18
    declaraciones  go to state 19
    decl_tipo      go to state 20
    decl_cte       go to state 21
    decl_var       go to state 22


State 9

    2 cabecera_alg: decl_globales • decl_a_f decl_ent_sal TK_COMENTARIO

    TK_ACCION   shift, and go to state 23
    TK_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 25
    accion_d   go to state 26
    funcion_d  go to state 27


State 10

    4 decl_globales: decl_tipo • decl_globales

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales  go to state 28
    decl_tipo      go to state 10
    decl_cte       go to state 11


State 11

    5 decl_globales: decl_cte • decl_globales

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales  go to state 29
    decl_tipo      go to state 10
    decl_cte       go to state 11


State 12

   30 lista_d_cte: TK_IDENTIFICADOR • TK_IGUAL TK_LITERAL TK_PUNTO_COMA lista_d_cte

    TK_IGUAL  shift, and go to state 30


State 13

   16 decl_cte: TK_CONST lista_d_cte • TK_FCONST TK_PUNTO_COMA

    TK_FCONST  shift, and go to state 31


State 14

   18 lista_d_tipo: TK_IDENTIFICADOR • TK_IGUAL d_tipo TK_PUNTO_COMA lista_d_tipo

    TK_IGUAL  shift, and go to state 32


State 15

   15 decl_tipo: TK_TIPO lista_d_tipo • TK_FTIPO TK_PUNTO_COMA

    TK_FTIPO  shift, and go to state 33


State 16

   17 decl_var: TK_VAR • lista_d_var TK_FVAR TK_PUNTO_COMA

    TK_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 34 (lista_d_var)

    lista_d_var  go to state 35
    lista_id     go to state 36


State 17

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_PUNTO_COMA cabecera_alg bloque_alg • TK_FALGORITMO

    TK_FALGORITMO  shift, and go to state 37


State 18

    3 bloque_alg: bloque • TK_COMENTARIO

    TK_COMENTARIO  shift, and go to state 38


State 19

   10 bloque: declaraciones • instrucciones

    TK_CONTINUAR      shift, and go to state 39
    TK_MIENTRAS       shift, and go to state 40
    TK_PARA           shift, and go to state 41
    TK_SI             shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 43

    operando       go to state 44
    instrucciones  go to state 45
    instruccion    go to state 46
    asignacion     go to state 47
    alternativa    go to state 48
    iteracion      go to state 49
    it_cota_fija   go to state 50
    it_cota_exp    go to state 51
    accion_ll      go to state 52


State 20

   11 declaraciones: decl_tipo • declaraciones

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones  go to state 53
    decl_tipo      go to state 20
    decl_cte       go to state 21
    decl_var       go to state 22


State 21

   12 declaraciones: decl_cte • declaraciones

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones  go to state 54
    decl_tipo      go to state 20
    decl_cte       go to state 21
    decl_var       go to state 22


State 22

   13 declaraciones: decl_var • declaraciones

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones  go to state 55
    decl_tipo      go to state 20
    decl_cte       go to state 21
    decl_var       go to state 22


State 23

   79 accion_d: TK_ACCION • a_cabecera bloque TK_FACCION

    TK_IDENTIFICADOR  shift, and go to state 56

    a_cabecera  go to state 57


State 24

   80 funcion_d: TK_FUNCION • f_cabecera bloque TK_DEV expresion TK_FFUNCION

    TK_IDENTIFICADOR  shift, and go to state 58

    f_cabecera  go to state 59


State 25

    2 cabecera_alg: decl_globales decl_a_f • decl_ent_sal TK_COMENTARIO

    TK_ENT  shift, and go to state 60
    TK_SAL  shift, and go to state 61

    decl_ent_sal  go to state 62
    decl_ent      go to state 63
    decl_sal      go to state 64


State 26

    7 decl_a_f: accion_d • decl_a_f

    TK_ACCION   shift, and go to state 23
    TK_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 65
    accion_d   go to state 26
    funcion_d  go to state 27


State 27

    8 decl_a_f: funcion_d • decl_a_f

    TK_ACCION   shift, and go to state 23
    TK_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 66
    accion_d   go to state 26
    funcion_d  go to state 27


State 28

    4 decl_globales: decl_tipo decl_globales •

    $default  reduce using rule 4 (decl_globales)


State 29

    5 decl_globales: decl_cte decl_globales •

    $default  reduce using rule 5 (decl_globales)


State 30

   30 lista_d_cte: TK_IDENTIFICADOR TK_IGUAL • TK_LITERAL TK_PUNTO_COMA lista_d_cte

    TK_LITERAL  shift, and go to state 67


State 31

   16 decl_cte: TK_CONST lista_d_cte TK_FCONST • TK_PUNTO_COMA

    TK_PUNTO_COMA  shift, and go to state 68


State 32

   18 lista_d_tipo: TK_IDENTIFICADOR TK_IGUAL • d_tipo TK_PUNTO_COMA lista_d_tipo

    TK_RESTA             shift, and go to state 69
    TK_ABRIR_PARENTESIS  shift, and go to state 70
    TK_TIPO_BASE         shift, and go to state 71
    TK_FALSO             shift, and go to state 72
    TK_NO                shift, and go to state 73
    TK_REF               shift, and go to state 74
    TK_TABLA             shift, and go to state 75
    TK_TUPLA             shift, and go to state 76
    TK_VERDADERO         shift, and go to state 77
    TK_IDENTIFICADOR     shift, and go to state 78
    TK_LITERAL_CARACTER  shift, and go to state 79
    TK_LITERAL_NUMERICO  shift, and go to state 80

    d_tipo       go to state 81
    expresion_t  go to state 82
    exp_a        go to state 83
    expresion    go to state 84
    operando     go to state 85
    funcion_ll   go to state 86


State 33

   15 decl_tipo: TK_TIPO lista_d_tipo TK_FTIPO • TK_PUNTO_COMA

    TK_PUNTO_COMA  shift, and go to state 87


State 34

   35 lista_id: TK_IDENTIFICADOR • TK_SEPARADOR lista_id
   36         | TK_IDENTIFICADOR •

    TK_SEPARADOR  shift, and go to state 88

    $default  reduce using rule 36 (lista_id)


State 35

   17 decl_var: TK_VAR lista_d_var • TK_FVAR TK_PUNTO_COMA

    TK_FVAR  shift, and go to state 89


State 36

   32 lista_d_var: lista_id • TK_DEFINICION TK_IDENTIFICADOR TK_PUNTO_COMA lista_d_var
   33            | lista_id • TK_DEFINICION d_tipo TK_PUNTO_COMA lista_d_var

    TK_DEFINICION  shift, and go to state 90


State 37

    1 desc_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_PUNTO_COMA cabecera_alg bloque_alg TK_FALGORITMO •

    $default  reduce using rule 1 (desc_algoritmo)


State 38

    3 bloque_alg: bloque TK_COMENTARIO •

    $default  reduce using rule 3 (bloque_alg)


State 39

   66 instruccion: TK_CONTINUAR •

    $default  reduce using rule 66 (instruccion)


State 40

   78 it_cota_exp: TK_MIENTRAS • expresion TK_HACER instrucciones TK_FMIENTRAS

    TK_RESTA             shift, and go to state 69
    TK_ABRIR_PARENTESIS  shift, and go to state 70
    TK_FALSO             shift, and go to state 72
    TK_NO                shift, and go to state 73
    TK_VERDADERO         shift, and go to state 77
    TK_IDENTIFICADOR     shift, and go to state 91
    TK_LITERAL_NUMERICO  shift, and go to state 80

    exp_a       go to state 83
    expresion   go to state 92
    operando    go to state 85
    funcion_ll  go to state 86


State 41

   77 it_cota_fija: TK_PARA • TK_IDENTIFICADOR TK_ASIGNACION expresion TK_HASTA expresion TK_HACER instrucciones TK_FPARA

    TK_IDENTIFICADOR  shift, and go to state 93


State 42

   72 alternativa: TK_SI • expresion TK_ENTONCES instrucciones lista_opciones TK_FSI

    TK_RESTA             shift, and go to state 69
    TK_ABRIR_PARENTESIS  shift, and go to state 70
    TK_FALSO             shift, and go to state 72
    TK_NO                shift, and go to state 73
    TK_VERDADERO         shift, and go to state 77
    TK_IDENTIFICADOR     shift, and go to state 91
    TK_LITERAL_NUMERICO  shift, and go to state 80

    exp_a       go to state 83
    expresion   go to state 94
    operando    go to state 85
    funcion_ll  go to state 86


State 43

   60 operando: TK_IDENTIFICADOR •
   88 accion_ll: TK_IDENTIFICADOR • TK_ABRIR_PARENTESIS l_ll TK_CERRAR_PARENTESIS

    TK_ABRIR_PARENTESIS  shift, and go to state 95

    TK_ABRIR_PARENTESIS  [reduce using rule 60 (operando)]
    $default             reduce using rule 60 (operando)


State 44

   61 operando: operando • TK_PUNTO operando
   62         | operando • TK_ABRIR_PARENTESIS expresion TK_CERRAR_PARENTESIS
   63         | operando • TK_REF
   71 asignacion: operando • TK_ASIGNACION expresion

    TK_ASIGNACION        shift, and go to state 96
    TK_ABRIR_PARENTESIS  shift, and go to state 97
    TK_PUNTO             shift, and go to state 98
    TK_REF               shift, and go to state 99


State 45

   10 bloque: declaraciones instrucciones •

    $default  reduce using rule 10 (bloque)


State 46

   64 instrucciones: instruccion • TK_PUNTO_COMA instrucciones
   65              | instruccion •

    TK_PUNTO_COMA  shift, and go to state 100

    $default  reduce using rule 65 (instrucciones)


State 47

   67 instruccion: asignacion •

    $default  reduce using rule 67 (instruccion)


State 48

   68 instruccion: alternativa •

    $default  reduce using rule 68 (instruccion)


State 49

   69 instruccion: iteracion •

    $default  reduce using rule 69 (instruccion)


State 50

   75 iteracion: it_cota_fija •

    $default  reduce using rule 75 (iteracion)


State 51

   76 iteracion: it_cota_exp •

    $default  reduce using rule 76 (iteracion)


State 52

   70 instruccion: accion_ll •

    $default  reduce using rule 70 (instruccion)


State 53

   11 declaraciones: decl_tipo declaraciones •

    $default  reduce using rule 11 (declaraciones)


State 54

   12 declaraciones: decl_cte declaraciones •

    $default  reduce using rule 12 (declaraciones)


State 55

   13 declaraciones: decl_var declaraciones •

    $default  reduce using rule 13 (declaraciones)


State 56

   81 a_cabecera: TK_IDENTIFICADOR • TK_ABRIR_PARENTESIS d_par_form TK_CERRAR_PARENTESIS TK_PUNTO_COMA

    TK_ABRIR_PARENTESIS  shift, and go to state 101


State 57

   79 accion_d: TK_ACCION a_cabecera • bloque TK_FACCION

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)
